# merchant_onboarding

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh  stop.sh
.github/workflows/: eval.yml
app/: config.py  main.py
app/api/: deps.py
app/db/: bulk_ingestor.py  merchant_profile_ingestor.py  merchant_store.py  oauth_store.py  queries.py  supabase_client.py
app/exceptions/: errors.py  handlers.py
app/exporters/: idealo_csv.py  idealo_pws.py
app/extractors/: base.py  bigcommerce_admin_extractor.py  (+18 more)
docs/: TEST_SITES.md  profiling.md
evals/: __init__.py  __main__.py  baseline.py  cli.py  history.py  loader.py  memory_cache.py  models.py  pipeline_runner.py  report.py  runner.py  scorer.py  snapshot.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
research/: 00-START-HERE.md  00_START_HERE.md  CRAWL4AI_2026_COMPLETE_GUIDE.md  CRAWL4AI_CODE_EXAMPLES.py  CRAWL4AI_ECOMMERCE_RESEARCH.md  CRAWL4AI_QUICK_REFERENCE.md  CRAWL4AI_RELIABILITY_PATTERNS.md  CRAWL4AI_RESEARCH_INDEX.md  CRAWL4AI_RESEARCH_SUMMARY.md  EXTRACTION_RELIABILITY_RESEARCH.md  PLATFORM_APIS.md  QUICK_REFERENCE.md  README.md  README_CRAWL4AI_RESEARCH.md  RELIABILITY_ACTION_PLAN.md  RESEARCH_SUMMARY.md  SCALE_PATTERNS.md  START_HERE.md  crawl4ai_code_snippets.py  crawl4ai_deep_research.md  crawl4ai_implementation_guide.md
scripts/: build_wc_fixtures.py  demo_extractors.py  probe_apis.py  test_live_pipeline.py  validate_detection.py
supabase/: config.toml
tests/: conftest.py
(+195 files in other folders)
