[project]
name = "merchant-onboarding"
version = "0.1.0"
description = "Merchant onboarding data ingestion pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "crawl4ai>=0.4.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "supabase>=2.11.0",
    "asyncpg>=0.30.0",
    "aiohttp>=3.11.0",
    "bleach>=6.2.0",
    "slowapi>=0.1.9",
    "sse-starlette>=2.1.0",
    "httpx>=0.28.0",
    "defusedxml>=0.7.1",
    "cryptography>=43.0.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.22",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "respx>=0.22.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ASYNC"]
ignore = ["B008"]  # Allow function calls in argument defaults (FastAPI Depends pattern)

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
